# rust-sidetracker-bot

./: .gitignore  Cargo.toml  env.sample
data/: prompt.txt
src/: api.rs  data.rs  main.rs  openai.rs  post.rs  session.rs  util.rs
test_data/: create_record.json5  get_list.json5  thread_3leb44umzuc2l.json5  thread_3lfd7fhrkyk24.json5
