[package]
name = "rust-sidetracker-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "=0.15.0"
openai = "1.0.0-alpha.18"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.23", features = ["env", "derive"] }
url = "2.5.4"
atrium-api = "0.24.9"
atrium-xrpc-client = "0.5.10"

[dev-dependencies]
mockito = "1.6.1"
serde_json5 = "0.1.0"
